# github-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  architecture.md  docker-compose.yml  dockerREADME.md  github_mcp_server.py  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
config/: ingest.yaml
github-mcp/: common.py  ingest.py  server.py
github_agent/: EC2Runbook.md  LGreadme.md  agent.py  app.py  config.yaml  runbook.md
github_mcp/: README.md  common.py  ingest.py  server.py  user_service.py
github_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: inspect_mcp.py
